// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`LabeledInput renders properly 1`] = `
<div
  className="theme-portal"
>
  <div
    className="wrapper"
  >
    <input
      className=" null"
      containerClassName=""
      id="testing"
      name="testing"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label
      for="testing"
    >
      <span
        className="fieldName"
      >
        Testing input
      </span>
    </label>
    <span
      className="errorMessage null"
    />
  </div>
</div>
`;

exports[`LabeledInput renders properly when different theme 1`] = `
<div
  className="theme-purple"
>
  <div
    className="wrapper"
  >
    <input
      className=" null"
      containerClassName=""
      id="testing"
      name="testing"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label
      for="testing"
    >
      <span
        className="fieldName"
      >
        Testing input
      </span>
    </label>
    <span
      className="errorMessage null"
    />
  </div>
</div>
`;

exports[`LabeledInput renders properly when it has an error 1`] = `
<div
  className="theme-purple"
>
  <div
    className="wrapper"
  >
    <input
      className=" error"
      containerClassName=""
      id="testing"
      name="testing"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label
      for="testing"
    >
      <span
        className="fieldName"
      >
        Testing input
      </span>
    </label>
    <span
      className="errorMessage active"
    >
      It is a required field
    </span>
  </div>
</div>
`;

exports[`LabeledInput renders properly when it is disabled 1`] = `
<div
  className="theme-portal"
>
  <div
    className="wrapper"
  >
    <input
      className=" null"
      containerClassName=""
      disabled={true}
      id="testing"
      name="testing"
      onChange={[Function]}
      type="text"
      value=""
    />
    <label
      for="testing"
    >
      <span
        className="fieldName"
      >
        Testing input
      </span>
    </label>
    <span
      className="errorMessage null"
    />
  </div>
</div>
`;

exports[`LabeledInput renders properly when type is number 1`] = `
<div
  className="theme-portal"
>
  <div
    className="wrapper"
  >
    <input
      className=" null"
      containerClassName=""
      id="testing"
      name="testing"
      onChange={[Function]}
      type="number"
      value=""
    />
    <label
      for="testing"
    >
      <span
        className="fieldName"
      >
        Testing input
      </span>
    </label>
    <span
      className="errorMessage null"
    />
  </div>
</div>
`;

exports[`LabeledInput renders properly with required 1`] = `
<div
  className="theme-portal"
>
  <div
    className="wrapper"
  >
    <input
      className=" null"
      containerClassName=""
      id="testing"
      name="testing"
      onChange={[Function]}
      required={true}
      type="text"
      value=""
    />
    <label
      for="testing"
    >
      <span
        className="fieldName"
      >
        Testing required input
      </span>
    </label>
    <span
      className="errorMessage null"
    />
  </div>
</div>
`;

exports[`LabeledInput renders properly with required and a value 1`] = `
<div
  className="theme-portal"
>
  <div
    className="wrapper"
  >
    <input
      className=" null"
      containerClassName=""
      id="testing"
      name="testing"
      onChange={[Function]}
      required={true}
      type="text"
      value="ABCD"
    />
    <label
      for="testing"
    >
      <span
        className="fieldName"
      >
        Testing input
      </span>
    </label>
    <span
      className="errorMessage null"
    />
  </div>
</div>
`;
